--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World! Welcome to my website
+<!doctype html>
+<title>Fakrullah Maulana</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
+
+<article>
+    <h1>Salam Hormat</h1>
+    <br />
+    <h2>Fakrullah Maulana </h2>
+    <div>
+        <p>
+            
+        Terus belajar dan terus dinamis wahai adik adik, terus berbagi dan jangan pernah mundur untuk melakukan kebaikan. 
+        </p>
+        <p>&mdash; Bang Maulana </p>
+    </div>
