--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 <article>
     <h1>Salam Hormat</h1>
-    <br />
-    <h2>Fakrullah Maulana </h2>
+<hr />
+  <h2>Fakrullah Maulana </h2>
     <div>
-        <p>
-            
+        <p>     
         Terus belajar dan terus dinamis wahai adik adik, terus berbagi dan jangan pernah mundur untuk melakukan kebaikan. 
         </p>
         <p>&mdash; Bang Maulana </p>
+      
+      <p>email:atjehcyber[at]gmail.com</p>
+
     </div>
