--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </style>
 
 <article>
-    <h1>Salam Hormat</h1>
-<hr />
-  <h2>Fakrullah Maulana </h2>
+    <h1>Bang Maulana</h1>
     <div>
         <p>     
-        Terus belajar dan terus dinamis wahai adik adik, terus berbagi dan jangan pernah mundur untuk melakukan kebaikan. 
+        Terus belajar dan terus dinamis. Tidak ada sistem yang sempurna serta tidak semua hal dapat di jawab oleh mesin pencari. Terus melangkah maju untuk memberikan kebaikan melalui Teknologi. 
         </p>
-        <p>&mdash; Bang Maulana </p>
+        <p>&mdash; Salam HackTivis </p>
       
-      <p>email:atjehcyber[at]gmail.com</p>
-
+      <p>90400105920/90400105820:BTPN</p>
+      <p>Phone:08216167733(satu)</p>
+      <p>Email:atjehcyber[@]gmail.com</p>
     </div>
