--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Fakrullah Maulana</title>
+<title>Bang Maul</title>
 <style>
   body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
