--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="description" content="Name of your web site">
-<meta name="author" content="Marketify">
+<meta name="description" content="Web Developer, Android Developer and IOS Developer we are can help you for All IT Support">
+<meta name="author" content="BangMaul">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Tokyo | Home</title>
+<title>Fakrullah Maulana<title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -180,7 +180,7 @@
 				</ul>
 			</div>
 			<div class="copyright">
-				<p>&copy; 2021 Tokyo<br>Created by <a href="https://themeforest.net/item/tokyo-personal-portfolio-template/31647361" target="_blank">Marketify</a></p>
+				<p>&copy; 2021 Aceh<br>Created by <a href="#" target="_blank">Hantu</a></p>
 			</div>
 		</div>
 	</div>
@@ -199,8 +199,8 @@
 								<div class="image" data-img-url="img/portfolio/1.jpg"></div>
 							</div>
 							<div class="details">
-								<h3 class="name">Adriano <span>Smith</span></h3>
-								<p class="job">Creative Photographer based in New York and happy to travel all over Europe to capture photos.</p>
+								<h3 class="name">Fakrullah <span>Maulana</span></h3>
+								<p class="job">Creative Developoer for Android, IOS and Web based in Indonesia and happy to travel for find some solution for any problem with IT.</p>
 								<div class="social">
 									<ul>
 										<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
@@ -236,12 +236,12 @@
 								</div>
 								<div class="right">
 									<ul>
-										<li><p><span>Birthday:</span>01.07.1990</p></li>
-										<li><p><span>Age:</span>31</p></li>
-										<li><p><span>Address:</span>Ave 11, New York, USA</p></li>
+									
+										<li><p><span>Age:</span>35</p></li>
+										<li><p><span>Address:</span>Jln. Keucik Ali No. 48 Aceh Indonesia</p></li>
 										<li><p><span>Email:</span><a href="mailto:mail@gmail.com">mail@gmail.com</a></p></li>
-										<li><p><span>Phone:</span><a href="tel:+770221770505">+77 022 177 05 05</a></p></li>
-										<li><p><span>Study:</span>Univercity of Texas</p></li>
+										<li><p><span>Phone:</span><a href="tel:+6282372721337">+62. 823 7272.1337</a></p></li>
+										
 										<li><p><span>Freelance:</span>Available</p></li>
 									</ul>
 								</div>
