--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<div class="tokyo_tm_home">
 						<div class="home_content">
 							<div class="avatar">
-								<div class="image" data-img-url="img/portfolio/1.jpg"></div>
+								<div class="image" data-img-url="img/gambar1.jpg"></div>
 							</div>
 							<div class="details">
 								<h3 class="name">Fakrullah <span>Maulana</span></h3>
