--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
 						<div class="tokyo_tm_title">
 							<div class="title_flex">
 								<div class="left">
-									<span>News</span>
-									<h3>Latest News</h3>
+									<span>Informasi Public</span>
+									<h3>Opini dan Tutor</h3>
 								</div>
 							</div>
 						</div>
@@ -499,33 +499,46 @@
 									<div class="details">
 										<div class="extra">
 											<div class="short">
-												<p class="date">By <a href="#">Alex Watson</a> <span>05 April 2021</span></p>
+												<p class="date">By <a href="#">Bang Maul</a> </p>
 											</div>
 											<div class="my_like">
 												<a href="#"><img class="svg" src="img/svg/like.svg" alt="" /><span>35</span></a>
 											</div>
 										</div>
-										<h3 class="title"><a href="#">Format releases a new tool that enables direct video hosting</a></h3>
+										<h3 class="title"><a href="#">INVESTASI Ke Atas</a></h3>
 										<div class="tokyo_tm_read_more">
-											<a href="#"><span>Read More</span></a>
+											<a href="#"><span>Baca Selengkapnya</span></a>
 										</div>
 									</div>
 									<div class="main_content">
 										<div class="descriptions">
-											<p class="bigger">Just because we can't get out and about like we normally would, doesn’t mean we have to stop taking pictures. There’s still plenty you can do, provided you're prepared to use some imagination. Here are a few ideas to keep you shooting until normal life resumes.</p>
-											<p>Most photographers love to shoot the unusual, and you don’t get much more unusual than These Unprecedented Times. Right now everything counts as out of the ordinary. There are a number of remarkable things about these lockdown days that are worth photographing now so we can remember them when it is all over.</p>
-											<p>Streets empty that are usually busy are remarkable and can evoke the sense of historical pictures from before the invention of the motorcar. Other things that are different at the moment will be queues to get into stores and the lines marked out on the floor to show how far apart we should be.</p>
+											<p class="bigger">
+												Untuk belajar online yang harus di lakukan adalah salah satu langkah untuk setiap orang mendapatkan informasi dan bahan pembelajaran, bang maul sebut itu adaalah investasi ke atas. 
+												dimana setiap orang sangat di haruskan untuk melakukan investasi keatas.
+												</p>
+											<p>
+												
+												Baik, apa itu investasi keatas yang di maksud oleh bang maul, adalah <strong>ILMU</strong>, untuk mendapatkan ilmu saat ini sudah sangat mudah, bisa dengan cara ikut seminar, ikut pelatihan, ikut workshop, baca buku dan bahkan saat ini bisa online juga.
+											</p>
+											<p>
+												
+												Selain dari itu juga, masih banyak orang berpikiran dan beralasan dengan berbagai cara, misal jauhlah, tidak ada uang lah, terlalu mahal lah, nanti saja lagi sibuk lah. dan masih banyak alasan lain yang memungkinkan untuk di sampaikan. 
+
+											</p>
 											<div class="quotebox">
 												<div class="icon">
 													<img class="svg" src="img/svg/quote.svg" alt="" />
 												</div>
-												<p>Most photographers find it hard to see interesting pictures in places in which they are most familiar. A trip somewhere new seems always exactly what our photography needed, as shooting away from home consistently inspires us to new artistic heights.</p>
+												<p>
+													<strong>ILMU</strong> adalah sebuah investasi paling penting dalam hidup ini, maka teruslah belajar, - Bang Maul
+												</p>
 											</div>
-											<p>Pretend everything is new and that you haven’t seen it before, and then you will be free to notice the leading lines, the places where one edge meets another in delightful geometric harmony, and how the ordinary things in the kitchen are transformed when the light is on or off.</p>
-											<p>The trick here is to look slowly, and then look again. Take the time to look in detail and to look at the same thing from different angles, with different light, long lenses and wide lenses. Then move to the left a bit. You may never feel the need to leave the house again.</p>
+											<p>
+												Tulisan sederhana ini di buat untuk sekedar tau saja, yang mau ikut silahkan dan yang gak mau belajar saya doakan cepat mati, karena akan buat semak dunia.
+											</p>
 										</div>
 										<div class="news_share">
-											<span>Share:</span>
+											<span>Bagikan ke teman kalian:</span>
 											<ul>
 												<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 												<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
