--- a/index.html
+++ b/index.html
@@ -488,12 +488,13 @@
 								</div>
 							</div>
 						</div>
+					
 						<ul>
 							<li>
 								<div class="list_inner">
 									<div class="image">
-										<img src="img/thumbs/4-3.jpg" alt="" />
-										<div class="main" data-img-url="img/news/1.jpg"></div>
+										<img src="img/thumbs/investasi.jpg" alt="" />
+										<div class="main" data-img-url="img/thumbs/investasi.jpg"></div>
 										<a class="tokyo_tm_full_link" href="#"></a>
 									</div>
 									<div class="details">
@@ -550,6 +551,9 @@
 									</div>
 								</div>
 							</li>
+
+
+
 							<li>
 								<div class="list_inner">
 									<div class="image">
