--- a/index.html
+++ b/index.html
@@ -196,18 +196,19 @@
 					<div class="tokyo_tm_home">
 						<div class="home_content">
 							<div class="avatar">
-								<div class="image" data-img-url="img/gambar1.jpg"></div>
+								<div class="image" data-img-url="img/bangmaul.jpeg"></div>
 							</div>
 							<div class="details">
 								<h3 class="name">Fakrullah <span>Maulana</span></h3>
-								<p class="job">Creative Developoer for Android, IOS and Web based in Indonesia and happy to travel for find some solution for any problem with IT.</p>
+								<p class="job">
+									Sering di sapa ({Bang Maul}) - Seorang Developer Web, Mobile dan Keamanan digital. yang berasal dari kota kecil Indonesia (Banda Aceh). Senang melakukan perjalanan dan berbagi informasi IT untuk semua lapisan masyarakat.</p>
 								<div class="social">
 									<ul>
-										<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
-										<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
-										<li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
+										<li><a href="facebook.com/erespond"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
+										<li><a href="twitter.com/atjeh1337"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
+										<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 										<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
-										<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg"  alt="" /></a></li>
+										<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg"  alt="" /></a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -222,8 +223,8 @@
 				<div class="container">
 					<div class="tokyo_tm_about">
 						<div class="about_image">
-							<img src="img/thumbs/4-2.jpg" alt="" />
-							<div class="main" data-img-url="img/portfolio/1.jpg"></div>
+							<img src="img/intro.png" width="auto" height="200" alt="" />
+							<div class="main" data-img-url="img/intro.png" width="100" height="200"></div>
 						</div>
 						<div class="description">
 							<h3 class="name">Fakrullah Maulana &amp; <span>Art of Code</span></h3>
@@ -235,7 +236,7 @@
 										Saya senang jalan ke berbagai wilayah dan mengamati berbagai masalah di seputar dan mencoba untuk memberikan solusi terbaik. 
 										<br /> Saat ini saya aktif untuk mengatasi kesenjangan digital yang terjadi di Indonesia. </p>
 									<div class="tokyo_tm_button">
-										<a href="#">Learn More</a>
+										<a href="#">Detail Tentang Saya</a>
 									</div>
 								</div>
 								<div class="right">
@@ -246,6 +247,7 @@
 										<li><p><span>Email:</span><a href="mailto:r00ts3ctors@gmail.com">atjehcyber[at]gmail[dot]com</a></p></li>
 										<li><p><span>Phone:</span><a href="tel:+6282372721337">+62. 823 7272.1337</a></p></li>
 													<li><p><span>Freelance:</span>Available</p></li>
+													
 									</ul>
 								</div>
 							</div>
@@ -269,8 +271,9 @@
 								<div class="portfolio_filter">
 									<ul>
 										<li><a href="#" class="current" data-filter="*">All</a></li>
-										<li><a href="#" data-filter=".vimeo">Vimeo</a></li>
+									
 										<li><a href="#" data-filter=".youtube">Youtube</a></li>
+										<li><a href="#" data-filter=".vimeo">Vimio</a></li>
 										<li><a href="#" data-filter=".soundcloud">Soundcloud</a></li>
 										<li><a href="#" data-filter=".image">Image</a></li>
 										<li><a href="#" data-filter=".detail">Detail</a></li>
