--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
 							<div class="details">
 								<h3 class="name">Fakrullah <span>Maulana</span></h3>
 								<p class="job">
-									Sering di sapa ({Bang Maul}) - Seorang Developer Web, Mobile dan Keamanan digital. yang berasal dari kota kecil Indonesia (Banda Aceh). Senang melakukan perjalanan dan berbagi informasi IT untuk semua lapisan masyarakat.</p>
+									Sering di sapa ({Bang Maul}) - Seorang Developer Web, Mobile dan Keamanan digital, juga pejuang literasi serta berjuang untuk mengatasi kesenjangan digital, yang berasal dari Aceh. Senang melakukan perjalanan dan berbagi informasi IT untuk semua lapisan masyarakat.</p>
 								<div class="social">
 									<ul>
 										<li><a href="facebook.com/erespond"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 										<li><a href="twitter.com/atjeh1337"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
-										<!-- <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
-										<li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
+										<li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
+										<!-- <li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li>
 										<li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg"  alt="" /></a></li> -->
 									</ul>
 								</div>
@@ -272,11 +272,11 @@
 									<ul>
 										<li><a href="#" class="current" data-filter="*">All</a></li>
 									
-										<li><a href="#" data-filter=".youtube">Youtube</a></li>
-										<li><a href="#" data-filter=".vimeo">Vimio</a></li>
-										<li><a href="#" data-filter=".soundcloud">Soundcloud</a></li>
-										<li><a href="#" data-filter=".image">Image</a></li>
-										<li><a href="#" data-filter=".detail">Detail</a></li>
+										<li><a href="#" data-filter=".youtube">Perjuangan</a></li>
+										<li><a href="#" data-filter=".vimeo">Opini</a></li>
+										<li><a href="#" data-filter=".soundcloud">Projects</a></li>
+										<li><a href="#" data-filter=".image">Gallery</a></li>
+										<li><a href="#" data-filter=".detail">Donasi</a></li>
 									</ul>
 								</div>
 							</div>
